--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Miller Beach / Gary / NWI Air Quality</title>
-    <meta name="description" content="A community-powered air quality/industry tracker for the Miller Beach/Gary/NWI region. Updated frequently, citizens of The Region can check the quality of the air they are breathing, ships on Lake Michigan, flights to/from Gary/GYY, O'Hare/ORD, Midway/MDW, South Shore trains, traffic accidents & congestion, all in one place." />
+    <meta name="description" content="A community-powered air quality/industry tracker for the Miller Beach/Gary/NWI region, tracking the air we breathe, ships on Lake Michigan, GYY/ORD/MDW flights, trains, and traffic congestion, all in one place." />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
   </head>
@@ -16,6 +16,15 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script type='application/ld+json'>
+    {
+      "@context": "http://www.schema.org",
+      "@type": "WebSite",
+      "name": "Miller Beach / Gary / NWI Air Quality",
+      "url": "https://millerbeach-air.com"
+    }
+    </script>
 
     <script>
         (function(i, s, o, g, r, a, m) {
