Feature: so many things, UI mainly, linting, mongodb optimisation

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat:300,400&display=swap" rel="stylesheet">
+
     <title>Miller Beach / Gary / NWI Air Quality</title>
     <meta name="description" content="A community-powered air quality/industry tracker for the Miller Beach/Gary/NWI region, tracking the air we breathe, ships on Lake Michigan, GYY/ORD/MDW flights, trains, and traffic congestion, all in one place." />
 
