--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat:300,500&display=swap" rel="stylesheet">
-
     <title>Miller Beach / Gary / NWI Air Quality</title>
     <meta name="description" content="A community-powered air quality/industry tracker for the Miller Beach/Gary/NWI region, tracking the air we breathe, ships on Lake Michigan, GYY/ORD/MDW flights, trains, and traffic congestion, all in one place." />
 
@@ -28,7 +26,7 @@
       "@context": "http://www.schema.org",
       "@type": "WebSite",
       "name": "Miller Beach / Gary / NWI Air Quality",
-      "url": "https://millerbeach-air.com"
+      "url": "https://millerbeach.community"
     }
     </script>
 
